# tso_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml
app/: config.py  ev_utils.py  filter_utils.py  main.py  models.py  redis.py  router.py  terminal_utils.py  websocket_manager.py  websocket_router.py
app/dependencies/: __init__.py  authentication.py
git_hooks/: embed_env_in_readme.py
scripts/: embed_env_in_readme.py
secrets/: .env.example
tests/: conftest.py  test_filter_utils.py  test_imports.py  test_router_utils.py
