[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "firebase-admin>=7.1.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "resend>=2.19.0",
    "stripe>=14.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
betfinder = { workspace = true }